--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -27,6 +27,26 @@
     font-size: 70px;
 }
 
+@media (min-width: 320px) and (max-width: 1280px) {
+
+.fondo-bienvenida {
+    width: 100%;
+    max-width: 100vw;
+    max-height: 100vh;
+}
+
+.frase-bienvenida {
+    position: absolute;
+    left: 3em;
+    font-size: 30px;
+}
+
+.header {
+    display: none;
+}
+
+}
+
 /* -------------------------------- CSS HEADER ------------------------------- */
 
 .rectangulo {
