--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -386,7 +386,76 @@ nav ul li a:hover {
 
 
 
+/* -------------------------- INICIO MIS FAVORITOS DESKTOP-------------------------- */
 
+.col {
+    padding: 0;
+    margin: 0;
+    gap: 1em;
+    display: flex;
+    flex-wrap: wrap;  
+    justify-content: center;
+    align-items: center;
+}
+
+.card {
+    width: 380px;
+    height: 70%;
+    border: solid 3px #FFF4F3;
+    background-color: #FFF4F3;
+    border-radius: 20px;
+    box-shadow: 2px 4px 2px rgb(184, 184, 184);
+    margin-top: 20em;  
+}
+
+.card-text{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 17px;
+}
+
+.card > img{
+    padding-right: 1%;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+
+.card-body{
+    background-color: #FFF4F3;
+    border-radius: 20px;
+    height: 30px;
+}
+
+.card-body > h5{
+    color:#827777;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.input-Box5{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 3%;
+}
+
+.btn-stock{
+    font-family: 'Montserrat', sans-serif;
+    padding: 10px 20px;
+    font-size: 15px;
+    background-color: #827777;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border: none;
+    border-radius: 40px;
+    margin-top: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    text-decoration: none;
+    color: #FFF;
+}
+
+/* ------------------------ FIN MIS FAVORITOS DESKTOP ----------------------- */
 
 
 /* ------------------------------ QUIENES SOMOS ----------------------------- */
