--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -82,7 +82,9 @@
     justify-content: flex-end;
     padding-right: 10em;
     padding-top: 10em;
+    z-index: 3;
 }
+
 
 nav ul li {
     list-style: none;
@@ -214,12 +216,14 @@ nav ul li a:hover {
     width: 100%;
 }
 
-.text-header {
+.text-header a{
     font-weight: bold;
     color: #975C58;
     font-size: 30px;
     margin: auto;
 }
+
+
 
 .img-header {
     width: 100%;
@@ -249,6 +253,7 @@ nav ul li a:hover {
 .btn-reservacel a {
     text-decoration: none;
     color: #fff;
+
 }
 
 .btn-reservacel {
@@ -438,6 +443,7 @@ nav ul li a:hover {
     align-items: center;
     justify-content: center;
     margin-top: 3%;
+    z-index: 5;
 }
 
 .btn-stock{
@@ -459,7 +465,7 @@ nav ul li a:hover {
 
 /* ------------------------ INICIO MIS FAVORITOS CELU ----------------------- */
 
-@media (min-width: 380px) and (max-width: 1200px) {
+@media (min-width: 380px) and (max-width: 1000px) {
 
 
 .header-index {
