--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -201,6 +201,20 @@ nav ul li a:hover {
         background-color: #fff;
     }
 
+    .btn-reservacel {
+        font-family: 'Montserrat', sans-serif;
+        padding: 10px 20px;
+        font-size: 15px;
+        background-color: #827777;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border: none;
+        border-radius: 40px;
+        margin-top: 10px;
+        cursor: pointer;
+        font-weight: bold;
+        text-decoration: none;
+        color: #FFF;
+    }
 }
 
 /* ------------------------- FIN DOLCE VITA DESKTOP ------------------------ */
@@ -223,6 +237,11 @@ nav ul li a:hover {
     margin: auto;
 }
 
+.text-header a:hover {
+    color: #f4c1c0;
+    text-decoration:underline; 
+    transition: all 0.5s;
+}
 
 
 .img-header {
@@ -250,12 +269,6 @@ nav ul li a:hover {
     padding-top: 1em;
 }
 
-.btn-reservacel a {
-    text-decoration: none;
-    color: #fff;
-
-}
-
 .btn-reservacel {
     font-family: 'Montserrat', sans-serif;
     padding: 10px 20px;
@@ -268,6 +281,7 @@ nav ul li a:hover {
     cursor: pointer;
     font-weight: bold;
     text-decoration: none;
+    color: #FFF;
 }
 
 .btn-wsp {
@@ -358,7 +372,7 @@ nav ul li a:hover {
         padding-bottom: 6px;
     }
 
-    .btn-wsp {
+    .btn-wsp{
         position: fixed;
         width: 55px;
         height: 55px;
@@ -375,7 +389,6 @@ nav ul li a:hover {
     }
 
     .btn-wsp:hover {
-        text-decoration: none;
         color: #0df053;
         background-color: #fff;
     }
