--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1199,10 +1199,10 @@ nav ul li a:hover {
     }
 
 
-    .input-Box2 > input {
-margin: 1em;
-margin-right: 3em;
-margin-bottom: 3em;
+    .input-Box2>input {
+        margin: 1em;
+        margin-right: 3em;
+        margin-bottom: 3em;
     }
 
 
@@ -1399,9 +1399,28 @@ margin-bottom: 3em;
 
 @media (min-width: 380px) and (max-width: 960px) {
     .card-body {
-        height: 80px;
+        height: 140px;
     }
+
+
+    .col {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+
+    .navbarvestidos ul {
+        display: flex;
+        flex-direction: column;
+        padding-right: 6em;
+    }
+
 }
+
+
+
+
+
 
 .card-body>h5 {
     color: #827777;
@@ -1433,8 +1452,6 @@ margin-bottom: 3em;
     max-height: 100vh;
 }
 
-
-
 .frase-bienvenida a {
     text-decoration: none;
 }
@@ -1450,6 +1467,17 @@ margin-bottom: 3em;
     top: 10%;
 }
 
+/* ------------------------ MEDIA QUERIES BIENVENIDA ------------------------ */
+
+@media (min-width: 320px) and (max-width: 1280px) {
+
+    .img-fondo {
+        min-width: 100vw;
+        max-height: 100vh;
+    }
+
+
+}
 
 /* ----------------------------- MEDIAS QUERIES PAGES ----------------------------- */
 
