Cambios en bienvenida

--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1399,7 +1399,7 @@ nav ul li a:hover {
         .footerstylevestidos {
             background-color: #F4C1BE;
             position: absolute;
-            top: 220em;
+            top: 9400px;
             width: 100%;
         }
     
