--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1503,3 +1503,74 @@ height: 960px;
 
 
 }
+
+
+/* ------------------------------- BIENVENIDA ------------------------------- */
+
+
+.img-fondo {
+    min-width: 100vw;
+    max-height: 100vh;
+}
+
+.frase-bienvenida {
+    position: absolute;
+    top: 40%;
+    left: 33%;
+}
+
+.frase-bienvenida a {
+    text-decoration: none;
+}
+
+.vector {
+    position: absolute;
+    top: 6%;
+}
+
+.vector4 {
+    position: absolute;
+    left: 40px;
+    top: 10%;
+}
+
+
+@media (min-width: 1280px) and (max-width: 2000px) {
+
+.bienvenida-cel {
+    display: none;
+}
+
+.dolce-img {
+    display: none;
+}
+
+}
+/* ------------------------ MEDIA QUERIES BIENVENIDA ------------------------ */
+
+@media (min-width: 320px) and (max-width: 1280px) {
+
+.bienvenida-compu {
+    display: none;
+}
+
+.img-fondo {
+height: 960px;
+}
+
+
+.vector, .vector1, .vector2, .vector4 {
+    display: none;
+}
+
+
+.dolce-img {
+    width: 400px;
+}
+
+.frase-bienvenida {
+    position: absolute;
+    top: 40%;
+    left: 13%;
+}
+}
